<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_group_previous_criteria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_insulin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insulin_name_hint"/>

    <RadioButton
        android:id="@+id/radio_insulin_dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insulin_dose_hint"/>

    <RadioButton
        android:id="@+id/radio_blood_glucose_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blood_glucose_level_text"/>

    <RadioButton
        android:id="@+id/radio_food_eaten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_eaten_hint"/>

    <RadioButton
        android:id="@+id/radio_additional_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/additional_notes_hint"/>
</RadioGroup>