<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="5"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/icon_rounded"
        android:contentDescription="@string/icon_content_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/app_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size"
        android:text="@string/app_version_text"/>

    <TextView
        android:id="@+id/database_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size"
        android:text="@string/database_version_text"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

    </androidx.core.widget.NestedScrollView>
</LinearLayout>