<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".settings.fragments.BGLHighlightingSettingsFragment">

    <TextView
        android:id="@+id/title_bgl_highlighting_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size"
        android:text="@string/title_bgl_highlighting_settings"/>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/text_box_padding"
        android:layout_marginStart="@dimen/text_box_padding"
        app:layout_constraintTop_toTopOf="@id/title_bgl_highlighting_settings"
        app:layout_constraintBottom_toBottomOf="@id/title_bgl_highlighting_settings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/title_bgl_highlighting_settings"
        android:background="@drawable/back"/>

    <Switch
        android:id="@+id/highlighting_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_bgl_highlighting_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/BasicText"
        android:switchPadding="@dimen/text_box_padding"
        android:text="@string/highlighting_enabled_text"/>

    <TextView
        android:id="@+id/ideal_range_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/highlighting_enabled"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/BasicText"
        android:text="@string/ideal_range_label"/>

    <EditText
        android:id="@+id/ideal_range_lower"
        android:layout_width="0dp"
        android:layout_marginLeft="@dimen/text_box_padding"
        android:layout_marginStart="@dimen/text_box_padding"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ideal_range_label"
        app:layout_constraintLeft_toRightOf="@id/ideal_range_label"
        app:layout_constraintRight_toLeftOf="@id/ideal_range_divider"
        android:gravity="center"
        android:background="@drawable/back"
        android:hint="@string/ideal_range_lower_hint"/>

    <TextView
        android:id="@+id/ideal_range_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_box_padding"
        android:layout_marginLeft="@dimen/text_box_padding"
        android:layout_marginRight="@dimen/text_box_padding"
        android:layout_marginStart="@dimen/text_box_padding"
        app:layout_constraintTop_toTopOf="@id/ideal_range_label"
        app:layout_constraintLeft_toRightOf="@id/ideal_range_lower"
        app:layout_constraintRight_toLeftOf="@id/ideal_range_upper"
        style="@style/BasicText"
        android:text="@string/target_range_indicator"/>

    <EditText
        android:id="@+id/ideal_range_upper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ideal_range_label"
        app:layout_constraintLeft_toRightOf="@id/ideal_range_divider"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:background="@drawable/back"
        android:hint="@string/ideal_range_upper_hint"/>

    <TextView
        android:id="@+id/high_range_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/ideal_range_label"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/BasicText"
        android:text="@string/high_range_label"/>

    <EditText
        android:id="@+id/high_range_lower"
        android:layout_width="0dp"
        android:layout_marginLeft="@dimen/text_box_padding"
        android:layout_marginStart="@dimen/text_box_padding"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/high_range_label"
        app:layout_constraintLeft_toRightOf="@id/ideal_range_label"
        app:layout_constraintRight_toLeftOf="@id/high_range_divider"
        android:gravity="center"
        android:background="@drawable/back"
        android:hint="@string/high_range_lower_hint"/>

    <TextView
        android:id="@+id/high_range_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_box_padding"
        android:layout_marginLeft="@dimen/text_box_padding"
        android:layout_marginRight="@dimen/text_box_padding"
        android:layout_marginStart="@dimen/text_box_padding"
        app:layout_constraintTop_toTopOf="@id/high_range_label"
        app:layout_constraintLeft_toRightOf="@id/high_range_lower"
        app:layout_constraintRight_toLeftOf="@id/high_range_upper"
        style="@style/BasicText"
        android:text="@string/target_range_indicator"/>

    <EditText
        android:id="@+id/high_range_upper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/high_range_label"
        app:layout_constraintLeft_toRightOf="@id/high_range_divider"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:background="@drawable/back"
        android:hint="@string/ideal_range_upper_hint"/>
</androidx.constraintlayout.widget.ConstraintLayout>